--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"autoprefixer": "^10.4.20",
+		"drizzle-kit": "^0.25.0",
+		"lucia": "^3.2.1",
+		"oslo": "^1.2.1",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
@@ -22,7 +25,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.34.1",
+		"postgres": "^3.4.4",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1"
 	}
